<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_450sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:foregroundGravity="center"
                app:cardCornerRadius="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.13999999">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_450sdp"
                    android:background="@drawable/bg_register">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/telephoneEdit"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="#ecf2ed"
                        android:ems="10"
                        android:inputType="phone"
                        android:textColor="@color/cardViewColor"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="@dimen/_8ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.464"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/telephoneLabel" />

                    <TextView
                        android:id="@+id/registerLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:fontFamily="monospace"
                        android:text="@string/sinscire_label"
                        android:textColor="#ecf2ed"
                        android:textSize="@dimen/_28ssp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.503"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="#ecf2ed"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:textColor="@color/cardViewColor"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="@dimen/_8ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.464"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/passwordLabel" />

                    <TextView
                        android:id="@+id/telephoneLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:fontFamily="monospace"
                        android:text="@string/telephone_label"
                        android:textColor="#F8F3F3"
                        android:textSize="@dimen/_11ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.469"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/registerLabel" />

                    <TextView
                        android:id="@+id/passwordLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:fontFamily="monospace"
                        android:text="@string/password_label"
                        android:textColor="#F4EBEB"
                        android:textSize="@dimen/_11ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.464"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/nomEdit" />

                    <Button
                        android:id="@+id/registerButton"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_14sdp"
                        android:background="@color/selectedIconColor"
                        android:fontFamily="monospace"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:shadowRadius="@integer/material_motion_duration_short_2"
                        android:text="@string/sinscire_label"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="#FAF7F7"
                        android:textSize="@dimen/_11ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.482"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/password" />

                    <TextView
                        android:id="@+id/emailLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_14sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:fontFamily="monospace"
                        android:text="@string/email_label"
                        android:textColor="#F8F3F3"
                        android:textSize="@dimen/_11ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.466"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/telephoneEdit" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEdit"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="#ecf2ed"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/cardViewColor"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="@dimen/_8ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.464"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

                    <TextView
                        android:id="@+id/nomLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:fontFamily="monospace"
                        android:text="@string/nom_label"
                        android:textColor="#F8F3F3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.462"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/emailEdit" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nomEdit"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="#ecf2ed"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:textColor="@color/cardViewColor"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="@dimen/_8ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.464"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/nomLabel" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="60dp"
                        android:fontFamily="monospace"
                        android:text="@string/deja_compte_label"
                        android:textColor="#F4EBEB"
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/registerButton"
                        app:layout_constraintVertical_bias="0.281" />

                    <TextView
                        android:id="@+id/loginLink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:text="@string/se_connecter"
                        android:textColor="@color/selectedIconColor"
                        android:textSize="@dimen/_11ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.134"
                        app:layout_constraintStart_toEndOf="@+id/textView7"
                        app:layout_constraintTop_toBottomOf="@+id/registerButton"
                        app:layout_constraintVertical_bias="0.284" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/progressBarRegister"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15ssp"
                android:visibility="invisible"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/progressBarColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />




        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>